--- a/src/components/SearchBar.module.scss
+++ b/src/components/SearchBar.module.scss
@@ -21,10 +21,10 @@
 }
 
 .searchInput {
-  width: 300px;
+  width: 50%;
 
   padding: 10px;
-  font-size: 16px;
+  font-size: 30px;
 
   border: none;
   outline: none;
@@ -33,7 +33,9 @@
 
   border-radius: 10px;
 
-  background: transparent;
+  background: white;
+
+  color: black;
 }
 
 .searchIcon {
